--- a/stat1.qmd
+++ b/stat1.qmd
@@ -1,10 +1,12 @@
 ---
 title: "Statistics 1 & 2"
-author: "Prof A Pathmeswaran<br>pathmes@kln.ac.lk<br>2023-01-31"
+author: "A Pathmeswaran<br>pathmes@kln.ac.lk<br>2023-01-31"
 format: 
   revealjs:
    theme: [default, custom.scss]
    footer: "MD Community Medicine 2023"
+   embed-resources: true
+   standalone: true
 ---
 
 ```{r}
@@ -91,6 +93,8 @@ set_bottom_border(row = 1, col = everywhere) %>%
 set_width(0.8)
 
 ```
+
+**Interpretation?**
 
 ## Q1 analysis 2
 
@@ -233,6 +237,16 @@ P value = `r format(t4$p.value, scientific = TRUE)`
 
 P value = `r format(t4$p.value, scientific = FALSE)`
 
+P value = `r format(t4$p.value, scientific = FALSE, digits = 1)`
+
+**SPSS Output**  
+
+P value = 0.000
+
+**Sensible Presentation**  
+
+P < 0.001
+
 ## Data from a clinical trial
 
 ```{r }
@@ -247,6 +261,13 @@ yop <- tribble(
 )
 yop %>% 
 kableExtra::kbl()
+
+p1 <- yop[1,2]/yop[3,2]
+q1 <- 1-p1
+p2 <- yop[1,3]/yop[3,3]
+q2 <- 1-p2
+p <- (yop[1,2]+yop[1,3])/(yop[3,2]+yop[3,3])
+q <- 1-p
 
 
 ```
@@ -303,3 +324,22 @@ set_width(0.8)
 
 Difference: `r round((t5$estimate1 - t5$estimate2), 3)`\
 95% CI: `r round(t5$conf.low, 3)` - `r round(t5$conf.high, 3)`
+  
+  
+## Books  
+
+Bland, M. (2015). **An introduction to medical statistics** (Fourth edition). Oxford University Press.  
+
+Armitage, P., Berry, G., & Matthews, J. N. S. (2001). **Statistical methods in medical research** (4th ed). Blackwell Science.  
+
+
+## Authors
+
+Altman, Douglas G    
+Bland, Martin  
+Colins, Garry S  
+Norman, Geoffrey R  
+Riley, Richard D  
+Senn, Stephen  
+Streiner, David L  
+
